debathena-liblocker (10.0.2-0debathena1) unstable; urgency=low

  * Update our autoconf for the 21st century.

 -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 19:46:48 -0400

debathena-liblocker (10.0.1-0debathena2) unstable; urgency=low

  * Make /var/run/attachtab/.{,dir}lock owned by root at startup to
    prevent a potential DoS from the first user to attach a locker.
  * Make /var/run/attachtab/ 770 instead of 777 to prevent unprivileged
    users from being able to get to and potentially manipulate entries
    they created in the attachtab.
  * Don't ship the attachtab as part of the package; instead create it
    during installation by running the init script.

 -- Evan Broder <broder@mit.edu>  Thu, 10 Dec 2009 17:27:42 -0500

debathena-liblocker (10.0.1-0debathena1) unstable; urgency=low

  * Add a configure-time option to tear the NFS (and therefore the krb4)
    out of liblocker.
  * Shell out to aklog, instead of duplicating all of its code.
  * On Debathena, build without NFS support.

 -- Evan Broder <broder@mit.edu>  Mon, 12 Oct 2009 14:54:27 -0400

debathena-liblocker (10.0.0-0debathena2) unstable; urgency=low

  * Change DEB_AUTO_UPDATE_AUTOCONF to 2.50, not 1.
  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 15:25:15 -0500

debathena-liblocker (10.0.0-0debathena1) unstable; urgency=low

  * Merged quilt patches into mainline Athena tree

 -- Shreevatsa R <vatsa@mit.edu>  Sun,  6 Apr 2008 16:12:27 -0400

debathena-liblocker (9.4.28-0debathena12) unstable; urgency=low

  * Set ownercheck on and explicit-mntpt off in attach.conf.

 -- Anders Kaseorg <andersk@mit.edu>  Wed, 15 Aug 2007 22:52:29 -0400

debathena-liblocker (9.4.28-0debathena11) unstable; urgency=low

  * Create /var/run/attachtab on boot.
