@@ -2,7 +2,7 @@ Source: debathena-liblocker
 Section: debathena/libs
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: @cdbs@, libopenafs-dev, libkrb5-dev, libhesiod-dev, libzephyr-dev
+Build-Depends: @cdbs@, autotools-dev, debathena-aclocal, libopenafs-dev, libkrb5-dev, libhesiod-dev, libzephyr-dev
 Standards-Version: 3.7.2
 
 Package: debathena-liblocker
